Fix flex collapse

--- a/sass/px-app-nav.scss
+++ b/sass/px-app-nav.scss
@@ -37,7 +37,7 @@ $px-app-nav-box-shadow: var(--px-app-nav-box-shadow, $inuit-shadow-navigation);
 
 .app-nav__items {
   height: $px-app-nav-height;
-  flex: 1;
+  flex: 1 1 auto;
   display: flex;
   max-width: 100%;
 }
